<resources>
    <string name="app_name">DomoHome</string>
    <string name="username">Username*</string>
    <string name="password">Password*</string>
    <string name="name">Name*</string>
    <string name="type">Type*</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="devices">Smart Devices</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open menu</string>
    <string name="close_nav">Close menu</string>
    <string name="starting_measurement">Starting Measurement</string>
    <string name="select_option">Select an option</string>
    <string name="code_house">Do you have an invitation code or do you want to create a new home?</string>
    <string name="code">Invite code</string>
    <string name="new_house">New House</string>
    <string name="input_code">Enter the invitation code</string>
    <string name="input_name">Enter the house name</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="error_login">Incorrect username or password</string>
    <string name="error_register">The username is used</string>
    <string name="add_device">Add Device</string>
    <string name="bulb_on">Light bulb turned on correctly</string>
    <string name="bulb_off">Light bulb turned off correctly</string>
    <string name="new_device">New Device</string>
    <string name="brand">Brand*</string>
    <string name="ip">IP*</string>
    <string name="not_user_passwd">If it is a tp_link bulb, you need to fill in the username and password fields</string>
    <string name="required_fields">Fill in the required fields</string>
    <string name="routines">Routines</string>
    <string name="add_routine">Add Routine</string>
    <string name="new_routine">New Routine</string>
    <string name="date">Date*</string>
    <string name="time">Time*</string>
    <string name="device">Device*</string>
    <string name="admin_options">Admin Options</string>
    <string name="manage_users">Manage Users</string>
    <string name="user">Username:</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_device">Delete Device</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="message_delete_user">Are you sure you want to delete the user?</string>
    <string name="message_delete_device">Are you sure you want to delete the device?</string>
    <string name="message_delete_routine">Are you sure you want to delete the routine?</string>
    <string name="message_delete_2">The action you are about to take is irreversible</string>
    <string name="user_successfully_delete">The user has been deleted successfully</string>
    <string name="user_error_delete">An error occurred while deleting the user</string>
    <string name="update_users">Update User</string>
    <string name="update">Update</string>
    <string name="rol">Rol</string>
    <string name="temp_humidity_sensor">Temp-Humidity Sensor</string>
    <string name="device_registered">Device registered Successfully</string>
    <string name="device_not_registered">Device registration failed</string>
    <string name="routine_registered">Routine registered Successfully</string>
    <string name="routine_not_registered">Routine registration failed</string>
    <string name="device_successfully_delete">The device has been deleted successfully</string>
    <string name="device_error_delete">An error occurred while deleting the device</string>
    <string name="routine_successfully_delete">The routine has been deleted successfully</string>
    <string name="routine_error_delete">An error occurred while deleting the routine</string>
    <string name="user_successfully_update">The user has been updated successfully</string>
    <string name="user_error_update">An error occurred while updating the user</string>
    <string name="settings">Settings</string>
    <string name="edit_user">Edit User</string>
    <string name="message_edit_user">Are you sure you want to edit the user?</string>
    <string name="message_update_user">Are you sure you want to update the user?</string>
    <string name="measures">Measures</string>
    <string name="temp">Temp:</string>
    <string name="humidity">Humidity:</string>
    <string name="date_title">Date:</string>
    <string name="save_measure">Save Measure</string>
    <string name="measure_successfully_saved">The measure has been saved successfully</string>
    <string name="measure_error_save">An error occurred while saving the measure</string>
    <string name="no_connection">There is no connection to the server</string>
</resources>