<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/casa"
            android:title="@string/home"
            android:iconTint="@null"/>

        <item
            android:id="@+id/nav_dispositivos"
            android:icon="@drawable/dispositivos"
            android:title="@string/devices"
            android:iconTint="@null"/>

    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/cerrar_sesion"
                android:title="@string/logout"
                android:iconTint="@null"/>
        </menu>
    </item>

</menu>