<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001219"
    tools:context=".Vista.AnyadirDispositivo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNuevoDispositivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_device"
            android:textColor="#00D0FF"
            android:textSize="40sp"
            android:layout_marginTop="25dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="65dp"
            android:textColor="#000000"
            android:hint="@string/name"
            android:textColorHint="#7C7C7C"
            android:textSize="18sp"
            android:background="@drawable/et_redondeado"
            android:paddingHorizontal="6dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="50dp"
            android:singleLine="true"/>

        <Spinner
            android:id="@+id/spType"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="65dp"
            android:prompt="@string/type"
            android:textSize="18sp"
            android:background="@drawable/et_redondeado"
            android:paddingHorizontal="6dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="40dp"
            android:textColor="#000000"/>

        <Spinner
            android:id="@+id/spMarca"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="65dp"
            android:textColor="#000000"
            android:hint="@string/brand"
            android:textColorHint="#7C7C7C"
            android:textSize="18sp"
            android:background="@drawable/et_redondeado"
            android:paddingHorizontal="6dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="65dp"
            android:textColor="#000000"
            android:hint="@string/username"
            android:textColorHint="#7C7C7C"
            android:textSize="18sp"
            android:background="@drawable/et_redondeado"
            android:paddingHorizontal="6dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="40dp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/etPasswd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="65dp"
            android:textColor="#000000"
            android:hint="@string/password"
            android:textColorHint="#7C7C7C"
            android:textSize="18sp"
            android:background="@drawable/et_redondeado"
            android:paddingHorizontal="6dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="40dp"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btnAnyadeDispositivo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_redondeado"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:text="@string/add_device"
            android:textColor="@color/black"/>

    </LinearLayout>

</FrameLayout>