<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001219"
    tools:context=".Vista.AnyadirRutina"
    android:id="@+id/anyadirRutina">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvNuevaRutina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_routine"
                android:textColor="#00D0FF"
                android:textSize="40sp"
                android:layout_marginTop="15dp"/>

            <Spinner
                android:id="@+id/spDispositivo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="30dp"
                android:textSize="18sp"
                android:background="@drawable/et_redondeado"
                android:paddingHorizontal="6dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="65dp"
                android:popupBackground="#B7B8BA"
                android:layout_marginEnd="20dp"/>

            <Spinner
                android:id="@+id/spType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="30dp"
                android:textSize="18sp"
                android:background="@drawable/et_redondeado"
                android:paddingHorizontal="6dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:popupBackground="#B7B8BA"
                android:layout_marginEnd="20dp"/>

            <EditText
                android:id="@+id/etFecha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="65dp"
                android:textColor="#000000"
                android:hint="@string/date"
                android:textColorHint="#7C7C7C"
                android:textSize="18sp"
                android:background="@drawable/et_redondeado"
                android:paddingHorizontal="6dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="50dp"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/etHora"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="65dp"
                android:textColor="#000000"
                android:hint="@string/time"
                android:textColorHint="#7C7C7C"
                android:textSize="18sp"
                android:background="@drawable/et_redondeado"
                android:paddingHorizontal="6dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="40dp"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnAnyadeRutina"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_redondeado"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="60dp"
                android:text="@string/add_routine"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>