<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.Home"
    android:background="#001219"
    android:id="@+id/home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="#00D0FF"
            android:textSize="40sp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/ivCasa"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/casa"
            android:layout_marginTop="20dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:layout_marginTop="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:src="@drawable/termometro" />
                <TextView
                    android:id="@+id/tvTemperatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_measurement"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="-40dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="18dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:src="@drawable/humedad" />
                <TextView
                    android:id="@+id/tvHumedad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_measurement"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="-40dp"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/tvInvitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/white"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_margin="15dp"/>

    </LinearLayout>

</FrameLayout>