<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#001219">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#001219">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#001219">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="3">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temp"
                            android:textSize="27sp"
                            android:layout_marginTop="15dp"/>

                        <TextView
                            android:id="@+id/tvTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="23sp"
                            android:layout_marginTop="15dp"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textSize="27sp"
                            android:layout_marginTop="15dp"/>

                        <TextView
                            android:id="@+id/tvHumedad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="23sp"
                            android:layout_marginTop="15dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textSize="27sp"
                            android:layout_marginTop="15dp"/>

                        <TextView
                            android:id="@+id/tvFechaHora"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="23sp"
                            android:layout_marginTop="15dp"/>

                    </LinearLayout>

                </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FFFFFF" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>